Navbar fixed not working on mobile, test1

--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,7 @@ section:not(:first-of-type) {
 nav {
     background-color: #f5f5f5;
     box-shadow: 0px 0px 0px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+    position: fixed;
     /* position: fixed; */
 }
 /* .navbar-fixed {
